Use own router implementation instead
